game-core/spell fix spell system part1